Fix: text color is illegible for highlighed item using the darktheme.

--- a/resource/css/grid.css
+++ b/resource/css/grid.css
@@ -67,9 +67,11 @@ body.darktheme #vvp-items-grid-container .vvp-item-tile a:active {
 
 body.darktheme #vvp-items-grid-container div.bookmark-highlight a,
 body.darktheme #vvp-items-grid-container div.bookmark-highlight a:visited,
-body.darktheme #vvp-items-grid-container div.bookmark-highlight a:active,
+body.darktheme #vvp-items-grid-container div.bookmark-highlight a:active {
+	color: var(--item-link-light);
+}
+
 body.darktheme #vvp-items-grid-container div.keyword-highlight a,
 body.darktheme #vvp-items-grid-container div.keyword-highlight a:visited,
 body.darktheme #vvp-items-grid-container div.keyword-highlight a:active {
-	color: var(--item-link-light);
 }
